--- a/front/index.html
+++ b/front/index.html
@@ -1,55 +1,13 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <title>Three.js Globe</title>
-  <style>
-    body { margin: 0; overflow: hidden; }
-    canvas { display: block; }
-    #tooltip {
-      position: fixed;
-      bottom: 0;
-      left: 0; /* Align to the left edge */
-      width: 100%; /* Full width */
-      transform: none; /* Remove transform */
-      background: rgba(0, 0, 0, 0.6);
-      color: white;
-      padding: 10px 0; /* Add vertical padding, remove horizontal */
-      text-align: center; /* Center the text */
-      border-radius: 0; /* Remove border radius */
-      pointer-events: none;
-      display: none; /* Initially hidden */
-    }
-    #ship-filter-container {
-      position: fixed;
-      top: 10px;
-      left: 10px;
-      z-index: 1000;
-      background: rgba(255,255,255,0.9);
-      padding: 8px 12px;
-      border-radius: 6px;
-      box-shadow: 0 2px 8px rgba(0,0,0,0.08);
-      height: 33%;
-    }
-    #cruise-count {
-      position: fixed;
-      right: 10px;
-      bottom: 10px;
-      font-size: 12px;
-      color: #888;
-      background: rgba(255,255,255,0.8);
-      padding: 2px 8px;
-      border-radius: 4px;
-      z-index: 1000;
-    }
-  </style>
-</head>
-<body>
-  <div id="ship-filter-container">
-    <select id="ship-filter" multiple style="width: 220px; height: 100%;"></select>
-  </div>
-  <div id="tooltip"></div>
-  <div id="cruise-count"></div>
-  <script type="module" src="/main.js"></script>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Cruise finder</title>
+  </head>
+  <body>
+    <div id="root"></div>
+    <script type="module" src="/src/main.jsx"></script>
+  </body>
 </html>
